--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "google-map-react": "^2.2.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "three": "^0.144.0",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
