--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "browser-image-compression": "^2.0.0",
     "classnames": "^2.3.2",
     "google-map-react": "^2.2.0",
     "node-sass": "^7.0.3",
